[gd_scene load_steps=2 format=3 uid="uid://bu4jtdiphyhtc"]

[ext_resource type="Script" path="res://src/ScoreScreen/ScoreScreen.gd" id="1_vfk7o"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vfk7o")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Level "

[node name="LevelNumber" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = " complete"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2"]
layout_mode = 2
text = "Coins collected: "

[node name="CoinsNumber" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Next level"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
